--- a/thesis/main.Rnw
+++ b/thesis/main.Rnw
@@ -27,7 +27,7 @@
 
 \documentclass[11pt, letterpaper, oneside]{Thesis} % Paper size, default font size and one-sided paper  % change a4paper to letterpaper ATA
 
-\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
+%\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
 
 \usepackage[square, numbers, comma, sort&compress]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers' 
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
