--- a/thesis/Thesis.cls
+++ b/thesis/Thesis.cls
@@ -117,12 +117,13 @@
 \newtheorem{remark}[theorem]{Remark}
 \usepackage[centerlast,small,sc]{caption}
 \setlength{\captionmargin}{20pt}
-\newcommand{\fref}[1]{Figure~\ref{#1}}
-\newcommand{\tref}[1]{Table~\ref{#1}}
-\newcommand{\eref}[1]{Equation~\ref{#1}}
-\newcommand{\cref}[1]{Chapter~\ref{#1}}
-\newcommand{\sref}[1]{Section~\ref{#1}}
-\newcommand{\aref}[1]{Appendix~\ref{#1}}
+\usepackage{varioref}  % ATA added and then change \ref to \vref
+\newcommand{\fref}[1]{Figure~\vref{#1}}
+\newcommand{\tref}[1]{Table~\vref{#1}}
+\newcommand{\eref}[1]{Equation~\vref{#1}}
+\newcommand{\cref}[1]{Chapter~\vref{#1}}
+\newcommand{\sref}[1]{Section~\vref{#1}}
+\newcommand{\aref}[1]{Appendix~\vref{#1}}
 \renewcommand{\topfraction}{0.85}
 \renewcommand{\bottomfraction}{.85}
 \renewcommand{\textfraction}{0.1}
