--- a/thesis/main.Rnw
+++ b/thesis/main.Rnw
@@ -25,13 +25,12 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[11pt, letterpaper, oneside]{Thesis} % Paper size, default font size and one-sided paper  % change a4paper to letterpaper ATA letterpaper, 
+\documentclass[11pt, oneside]{Thesis} % Paper size, default font size and one-sided paper  
 
-\usepackage[letterpaper,includehead,includefoot]{geometry}
-\geometry{top=2.0in, bottom=0.0in, left=2.25in, right=0.0in}
-\usepackage{pdfpages}
+\usepackage[letterpaper,includehead,includefoot]{geometry} % change letterpaper to a4paper for A4 paper size
+\geometry{top=2.0in, bottom=0.0in, left=2.25in, right=0.0in} % read geometry documentation for setting margins
 
-%\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
+\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
 
 \usepackage[square, numbers, comma, sort&compress]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers' 
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
@@ -114,7 +113,7 @@ knit_hooks$set(margin = function(before, options, envir){
  
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
-\emph{Author:}\\
+\emph{Author(s):}\\
 \href{https://github.com/alanarnholt/SEMINAR}{\authornames} % Author name - remove the \href bracket to remove the link
 \end{flushleft}
 \end{minipage}
