--- a/Git/GitOne.Rmd
+++ b/Git/GitOne.Rmd
@@ -31,7 +31,7 @@ One last thought before we talk about actually installing and using Git.  You ma
 
 Download and install the lastest version of [Git.](http://git-scm.com/downloads)
 
-<img class=center src="./images/GitDownload.png" height='480'/>
+<img class=center src="./images/SGitDownload.png" height='480'/>
 
 ## Mac Users
 Install the downloaded file by clicking on the downloaded `*.dmg` file then clicking on the `*.pkg` file. 
