--- a/Git/GitOne.Rmd
+++ b/Git/GitOne.Rmd
@@ -104,7 +104,7 @@ From the third line of the previous output, one can see the
 
 ### What is GitHub?
 
-["GitHub is a web-based hosting service for software development projects that use the Git revision control system. GitHub offers both paid plans for private repositories, and free accounts for open source projects. The site was launched in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett."](http://en.wikipedia.org/wiki/GitHub)
+["GitHub] is a web-based hosting service for software development projects that use the Git revision control system. GitHub offers both paid plans for private repositories, and free accounts for open source projects. The site was launched in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett."(http://en.wikipedia.org/wiki/GitHub)
 
 ## Creating a GitHub Account
 
