staging all files

--- a/Git/GitOne.Rmd
+++ b/Git/GitOne.Rmd
@@ -104,15 +104,31 @@ From the third line of the previous output, one can see the
 
 ### What is GitHub?
 
-"GitHub is a web-based hosting service for software development projects that use the Git revision control system. GitHub offers both paid plans for private repositories, and free accounts for open source projects. The site was launched in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett."(http://en.wikipedia.org/wiki/GitHub)
+"GitHub is a web-based hosting service for software development projects that use 
+the Git revision control system. GitHub offers both paid plans for private 
+repositories, and free accounts for open source projects. The site was launched 
+in 2008 by Tom Preston-Werner, Chris Wanstrath, and PJ Hyett."
+[http://en.wikipedia.org/wiki/GitHub](http://en.wikipedia.org/wiki/GitHub)
 
 Qualified faculty members can request free private accounts to use with their classes.
-To request a discount, which actually pays the whole price for 10 private repositories for qualified faculty, click on the request a discount at [https://education.github.com](https://education.github.com).  A step-by-step guide for setting up your GitHub organization for classroom use can be found at [https://education.github.com/guide](https://education.github.com/guide).  Free private repositories for anyone can be created at [https://bitbucket.org](https://bitbucket.org).  Bitbucket, like GitHub, is a web based hosting service that uses the Git revision control system.
+To request a discount, which actually pays the whole price for 10 private repositories 
+for qualified faculty, click on the request a discount at 
+[https://education.github.com](https://education.github.com).  A step-by-step guide 
+for setting up your GitHub organization for classroom use can be found at 
+[https://education.github.com/guide](https://education.github.com/guide).  
+Free private repositories for anyone can be created at 
+[https://bitbucket.org](https://bitbucket.org).  Bitbucket, like GitHub, is a web 
+based hosting service that uses the Git revision control system.
 
 ## Creating a GitHub Account
 
 Point your browser to [https://github.com](https://github.com),
-type a username in the `Pick a username` box (please use `firstlast`, for example my username is `alanarnholt`), enter your email (use your school email) in the `Your email` box, type in your password in the `Create a password` box. Then, click the `Sign up for GitHub` box and you will have a GitHub account.
+type a username in the `Pick a username` box (please use `firstlast`, for example my 
+username is `alanarnholt`), enter your email (use your school email) in the 
+`Your email` box, type in your password in the `Create a password` box. Then, 
+click the `Sign up for GitHub` box and you will have a GitHub account.  You should 
+use the same name you used when you set up your `user.name` and `user.email` on your 
+local machine.
 
 
 ### Creating a GitHub Repository
